# ColorGamut

./: CMakeLists.txt  README.md
cmake/Modules/: FindANTTWEAKBAR.cmake  FindGLFW.cmake
data/: 1nm-2.csv  1nm.csv  Kodak Minilab.csv  munsell.csv
src/: Color.cpp  Color.h  Defines.h  KodakMinilab.cpp  KodakMinilab.h  Lab.cpp  Lab.h  Munsell.cpp  Munsell.h  NormalizedXYZ.cpp  NormalizedXYZ.h  SegmentMaximaColor.cpp  SegmentMaximaColor.h  Vec.h  Wavelength.cpp  Wavelength.h  XYZ.cpp  XYZ.h  main.cpp  main.h  sRGB.cpp  sRGB.h  transfm.c  transfm.h
